--- a/sites/configurations/scvo/templates/grants/grant-cats-search.hbs
+++ b/sites/configurations/scvo/templates/grants/grant-cats-search.hbs
@@ -35,21 +35,13 @@
           <form action="/running-your-organisation/funding/carers-act-transformation-support-fund/projects" method="GET" [searchroute]="'grant_ccrf_search'" class="search_form" data-auto-search="true">
             <div class="mdc-layout-grid">
               <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                   <div class="mdc-textfield mdc-textfield--upgraded">
                     <input type="text" class="mdc-textfield__input searchRoute" name="q" id="grant-ccrf-keywords" value="{{request.params.query.q}}" placeholder="Search query">
                     <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                       <span class="far fa-2x fa-search" aria-hidden="true"></span>
                     </button>
                   </div>
-                </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-                  <select class="mdc-select" role="listbox" id="grant-ccrf-call" name="call">
-                    <option value="" {{#if @root.request.params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
-                    {{#each @root.data.supplimentaryResponses.types.aggregations.calls.buckets ~}}
-                    <option value="{{slugify key}}" {{#compare @root.request.params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
-                    {{/each ~}}
-                  </select>
                 </div>
               </div>
             </div>
@@ -61,9 +53,26 @@
             <div class="mdc-layout-grid__inner">
               {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
               {{#each @root.data.primaryResponse.hits.hits ~}}
+              {{#with _source ~}}
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                {{{_source.rendered.scvo_card}}}
+                <div class="mdc-card card scvo-grant scvo-grant-cats">
+                  <section class="mdc-card__primary">
+                    <h1 class="mdc-card__title mdc-card__title--large">
+                      <a href="/running-your-organisation/funding/carers-act-transformation-support-fund/projects/{{slug}}">{{title}}</a>
+                    </h1>
+                  </section>
+                  <section class="mdc-card__supporting-text">
+                    {{#if description ~}}
+                    {{{truncate description 180}}} <a href="/running-your-organisation/funding/carers-act-transformation-support-fund/projects/{{slug}}">Read more</a>
+                    {{else}}
+                    {{#if recipient_overview ~}}
+                    {{{truncate recipient_overview 180}}} <a href="/running-your-organisation/funding/carers-act-transformation-support-fund/projects/{{slug}}">Read more</a>
+                    {{/if ~}}
+                    {{/if ~}}
+                  </section>
+                </div>
               </div>
+              {{/with ~}}
               {{/each ~}}
               {{else}}
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
