--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -126,7 +126,7 @@
       </h3>
       <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
         {{#compare this "===" "regions" ~}}
-          {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
+          {{#if (any @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ~}}
             {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
               {{#if key ~}}
                 {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
@@ -143,7 +143,7 @@
               <h3 class="mdc-typography--headline7">Other</h3>
               {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
             {{/compare ~}}
-          {{/compare ~}}
+          {{/if ~}}
         {{else}}
           {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
             {{#if key ~}}
