--- a/sites/configurations/scvo/templates/grants/grant-cats.hbs
+++ b/sites/configurations/scvo/templates/grants/grant-cats.hbs
@@ -52,7 +52,7 @@
               </li>
               {{#if recipient_charity_number}}
               <li>
-                <span class="fa-li far fa-info-circle"></span>
+                <span class="fa-li far fa-badge-check"></span>
                 Charity registered in Scotland <a href="http://www.oscr.org.uk/about-charities/search-the-register/charity-details?number={{recipient_charity_number}}">{{recipient_charity_number}}</a>
               </li>
               {{/if}}
