Implementation of "various locations"

--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -11,7 +11,7 @@
     {{#compare @root.route.name "===" "vacancy" ~}}
     {{#compare view "===" "full" ~}}
     {{#if @root.request.url.search ~}}
-    {{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.salary_min @root.request.params.query.salary_max @root.request.params.query.working_patterns @root.request.params.query.regions @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.home_based ~}}
+    {{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.salary_min @root.request.params.query.salary_max @root.request.params.query.working_patterns @root.request.params.query.regions @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.home_based @root.request.params.query.various_locations ~}}
     <a href="/search{{@root.request.url.search}}" class="back-to-results"><span class="far fa-chevron-circle-left" aria-hidden="true"></span> <span class="underline">Back to search results</span></a>
     {{/ifAny ~}}
     {{/if ~}}
