--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -7,6 +7,6 @@
   {{else}}
     {{> vacancy_description limit="6rem" description=description}}
   {{/compare ~}}
-  {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
+  {{> vacancy_actions slug=slug Id=Id home_based=home_based various_locations=various_locations distance=distance}}
 </div>
 {{>ga documentType="goodmoves-vacancy" documentId=Id hitType=(default hitContext "search-result")}}
