--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -129,7 +129,7 @@
           {{#if (any @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ~}}
             {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
               {{#if key ~}}
-                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
+                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
                   <h3 class="mdc-typography--headline7">{{{key}}}</h3>
                 {{/compare ~}}
               {{/if ~}}
@@ -139,10 +139,17 @@
                 {{/if ~}}
               {{/each ~}}
             {{/each ~}}
-            {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">" 1 ~}}
-              <h3 class="mdc-typography--headline7">Other</h3>
-              {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
-            {{/compare ~}}
+            {{#ifAny (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+                <h3 class="mdc-typography--headline7">Other</h3>
+              {{/compare ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">=" 1 ~}}
+                {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
+              {{/compare ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ">=" 1 ~}}
+                {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
+              {{/compare ~}}
+            {{/ifAny ~}}
           {{/if ~}}
         {{else}}
           {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
