--- a/sites/configurations/goodmoves/partials/vacancy/actions.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/actions.hbs
@@ -6,8 +6,8 @@
     {{else}}
     {{#compare @root.route.name "===" "vacancy_search" ~}}
     {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
-    {{#if home_based ~}}
-    {{else}}
+    {{#if home_based ~}}{{else}}
+    {{#if various_locations ~}}{{else}}
     {{#if distance ~}}
     <ul class="fa-ul mdc-card__action hide-sm">
       <li class="mdc-card__info--search-distance mdc-typography--body2">
@@ -23,6 +23,7 @@
         {{/compare ~}}
       </li>
     </ul>
+    {{/if ~}}
     {{/if ~}}
     {{/if ~}}
     {{/ifAll ~}}
