finished un-cssed Vol opp

--- a/sites/configurations/getinvolved/templates/transform-times.hbs
+++ b/sites/configurations/getinvolved/templates/transform-times.hbs
@@ -4,7 +4,7 @@
                    wednesday_morning wednesday_afternoon wednesday_evening thursday_morning thursday_afternoon thursday_evening
                    friday_morning friday_afternoon friday_evening saturday_morning saturday_afternoon saturday_evening
                    sunday_morning sunday_afternoon sunday_evening}}true
-          {{else}}true{{/ifAny}},
+          {{else}}false{{/ifAny}},
   "times" : {
     "morning" : { "monday" : {{#if monday_morning}}true{{else}}false{{/if}}, "tuesday" : {{#if tuesday_morning}}true{{else}}false{{/if}}, "wednesday" : {{#if wednesday_morning}}true{{else}}false{{/if}}, "thursday" : {{#if thursday_morning}}true{{else}}false{{/if}}, "friday" : {{#if friday_morning}}true{{else}}false{{/if}}, "saturday" : {{#if saturday_morning}}true{{else}}false{{/if}}, "sunday" : {{#if sunday_morning}}true{{else}}false{{/if}} },
     "afternoon" : { "monday" : {{#if monday_afternoon}}true{{else}}false{{/if}}, "tuesday" : {{#if tuesday_afternoon}}true{{else}}false{{/if}}, "wednesday" : {{#if wednesday_afternoon}}true{{else}}false{{/if}}, "thursday" : {{#if thursday_afternoon}}true{{else}}false{{/if}}, "friday" : {{#if friday_afternoon}}true{{else}}false{{/if}}, "saturday" : {{#if saturday_afternoon}}true{{else}}false{{/if}}, "sunday" : {{#if sunday_afternoon}}true{{else}}false{{/if}} },
