Fixed toolkit button and added story to charter for dfid

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -1214,6 +1214,7 @@ footer {
 .resources.help-others,
 .resources.reports,
 .resources.logos,
+.stories.department-for-international-development-dfid,
 .stories.govan-housing-association,
 .stories.cre8te-opportunites,
 .stories.glasgow-life,
