--- a/sites/configurations/digitalparticipation/templates/stories-detail.hbs
+++ b/sites/configurations/digitalparticipation/templates/stories-detail.hbs
@@ -8,6 +8,39 @@
     </div>
   </div>
   <div class="mdc-layout-grid__inner detail">
+    {{#compare request.params.slug "===" "department-for-international-development-dfid"}}
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
+      <h3>“Back then, it was clear that digital was becoming essential to increase the department’s capabilities”</h3>
+      <p>&#8212; <strong><a href="/signatories/department-for-international-development-dfid">Department for International Development</a></strong></p>
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+      &nbsp;
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only m5">
+      <div class="pull-right expand">
+        <h3>
+          <a href="/stories">
+            <i class="fa fa-times-circle" aria-hidden="true"></i>
+          </a>
+        </h3>
+      </div>
+      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Govan Housing Association story page illustration" class="responsive-img margin-top" />
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="content">
+        <p>I launched DFID’s Digital Ninja network from East Kilbride in late 2015. Back then, it was clear that digital was becoming essential to increase the department’s capabilities.</p>
+        <p>Why? Better digital skills are a UK civil service-wide priority: being able to use modern digital tools and getting the benefits of collaborative working allows public servants to be more effective in their work. DFID now employs almost 950 staff from its East Kilbride HQ, with another 1,000+ in the London HQ.</p>
+        <p>Instead of the usual top-down approach — which we simply didn’t have resources for — we decided that bottom-up advocacy would be more effective and would reflect the ways digital technologies are changing work.</p>
+        <p>So we created a set of new, voluntary roles within the department: the digital ninjas that now number more than 250.</p>
+        <p><strong>“They deliver digital updates to their teams and cascade digital skills sessions”</strong></p>
+        <p>Prospective ninjas sign up via a brief Google Form (obviously) and have several main duties. They are their team’s go-to person for help with digital tools. They agree to be enthusiastic and willing to try new digital stuff. They deliver digital updates to their teams and cascade digital skills sessions. They share tips and support fellow ninjas on our active ninja Yammer network. And finally, they commit to keeping their digital skills up to date and helping colleagues master new digital skills.</p>
+        <p>There’s usually at least one person in each team who is the go-to for digital already, and being a ninja means explicit recognition for that work.</p>
+        <p>We’ve had ninjas reverse mentor our senior leaders so they can use our new technology more effectively, run training sessions for colleagues on new digital tools such as Trello and Yammer and even present at international conferences on the importance of digital for development.</p>
+        <p>DFID’s improved digital capabilities are already making a stark difference to its programming — as you can see from the other Innovate DFID posts — accelerated and supported by the ninjas.</p>
+      </div>
+      <hr class="margin-top" />
+    </div>
+    {{else}}
     {{#compare request.params.slug "===" "govan-housing-association"}}
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-4-phone">
       <h3>“Committed to increasing people’s quality of life using digital technology as a driver for education, employment, social integration, financial inclusion and general health and wellbeing”</h3>
@@ -101,6 +134,7 @@
     </div>
     {{else}}
     <h3>Error 404: Page not found</h3>
+    {{/compare}}
     {{/compare}}
     {{/compare}}
     {{/compare}}
