--- a/sites/configurations/digitalparticipation/templates/stories.hbs
+++ b/sites/configurations/digitalparticipation/templates/stories.hbs
@@ -10,6 +10,35 @@
   <div class="mdc-layout-grid__inner expand skills">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
       <h3>
+        Department for International Development
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone hide-on-med-and-up">
+      <h3>
+        <a href="/stories/department-for-international-development-dfid">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-7-tablet">
+      <p>
+        “Back then, it was clear that digital was becoming essential to increase the department’s capabilities.” <a href="/stories/department-for-international-development-dfid">Read more&hellip;</a>
+      </p>
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet">
+      <h3>
+        <a href="/stories/department-for-international-development-dfid">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      <hr class="nomargin" />
+    </div>
+  </div>
+  <div class="mdc-layout-grid__inner expand skills">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone">
+      <h3>
         Govan Housing Association
       </h3>
     </div>
