--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -108,7 +108,7 @@
               <section class="mdc-card__actions">
                 <ul>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/champions">Digital Champion Training</a></li>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/skills/scotlands-essential-digital-skills-toolkit">Toolkit</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/skills/scotlands-essential-digital-skills-toolkit">Digital Skills Toolkit</a></li>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund/projects">View projects</a></li>
                 </ul>
               </section>
