--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -38,12 +38,11 @@
   <link rel="search" type="application/opensearchdescription+xml" title="Get Involved" href="https://storage.googleapis.com/scvo-assets/assets/opensearch.xml" />
   <!-- <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
-  <!-- <link type="text/css" rel="stylesheet" href="/assets/css/getinvolved-styles.css"> -->
-  {{#compare request.url.hostname "getinvolved.local"}}
+  {{#compare @root.request.url.hostname "getinvolved.local" ~}}
     <link type="text/css" rel="stylesheet" href="/assets/getinvolved/main.css">
   {{else}}
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/getinvolved/main.css">
-  {{/compare}}
+  {{/compare ~}}
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-4"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
