--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -78,7 +78,7 @@
   {{#compare @root.request.url.hostname "goodmoves.local" ~}}
     <link type="text/css" rel="stylesheet" href="/assets/goodmoves/main.css">
   {{else}}
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main.css">
+    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main-{{@root.context.metaData.assetsVersion}}.css">
   {{/compare ~}}
   <script>
   if(location.host.indexOf('.local') > -1){
@@ -453,7 +453,7 @@
   {{#compare request.url.hostname "goodmoves.local"}}
     <script type="text/javascript" src="/assets/goodmoves/main.js"></script>
   {{else}}
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main.js"></script>
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/scvo-frontend/goodmoves/main-{{@root.context.metaData.assetsVersion}}.js"></script>
   {{/compare}}
   <script>
     var goodmoves = null; readyListeners = [];
