Added auth tasks and tidied up layout bugs

--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -1,15 +1,11 @@
 <div class="container-fluid home-banner">
-  <div class="banner-search overlay" style="background-image: url('');">
+  <div class="banner-search overlay" style="background-image: url('https://storage.googleapis.com/scvo-cms/22674/Drake-Music-06.jpg');">
     <div class="content page-content">
       <div class="overlay-content">
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-              <h1 class="header-text">
-                <span class="header-text-banner">
-                  <span class="normal welcome">Welcome to</span><br />Get <span class="normal moves">Involved!</span>
-                </span>
-              </h1>
+              {{> logo welcome="true"}}
               <p class="header-extra">
 
               </p>
